vlib/v/checker/tests/sizeof.vv
x := sizeof(BadType)
println(x)
